@@ -14,6 +14,7 @@
 
     Enhancements, changes:
     ----------------------------
+    + Don't update PowerDNS `change_date` removed in v2.1.9;
     + Added Isle of Man postcodes (#4318);
 
     Security Fixes:
